# wahl-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
src/: agent_orchestrator.py  controller.py  events.py  prompts.py
src/conversation/: conversation_state.py
src/services/: firestore_service.py  wahl_chat_service.py
src/stages/: active_listening.py  deliberation.py  party_matching.py  party_positioning.py  perspective_taking.py  start.py
src/utils/: events.py  messages.py
