[project]
name = "wahl-agent-backend"
version = "1.0.0"
description = "Backend for the wahl-agent"
authors = [
    {name = "Simon Karan",email = "simon@wahl.chat"},
    {name = "wahl.chat",email = "info@wahl.chat"}
]
license = "PolyForm-Noncommercial-1.0.0"
readme = "README.md"
requires-python = ">=3.11,<=3.12"
dependencies = [
    "ruff>=0.14.4,<0.15.0",
    "dotenv (>=0.9.9,<0.10.0)",
    "langgraph (>=1.0.3,<2.0.0)",
    "langchain (>=1.0.5,<2.0.0)",
    "langchain-openai (>=1.0.2,<2.0.0)",
    "firebase-admin>=7.1.0,<8.0.0",
    "flask>=3.1.2,<4.0.0",
    "openai>=2.8.0,<3.0.0",
    "requests>=2.32.0,<3.0.0",
    "python-socketio[client]>=5.11.0,<6.0.0",
    "aiohttp>=3.13.2,<4.0.0",
    "gunicorn>=23.0.0,<24.0.0",
]

[tool.poetry]
packages = [
    {include = "src"}
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
